--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,32 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+@theme {
+	--color-primary: var(--color-emerald-600);
+	--color-secondary: var(--color-rose-500);
+
+	--default-transition-duration: 400ms;
+	--default-transition-timing-function: ease-in-out;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+html {
+	@apply bg-zinc-950 text-white;
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+	@apply px-8;
+	font-size: 20px;
+	margin: 0 auto;
+}
+
+input,
+button {
+	font-size: 20px;
+}
+
+h1 {
+	@apply text-4xl;
+}
+
+h2 {
+	@apply text-2xl;
 }
