--- a/src/app/auth/form/AuthForm.module.scss
+++ b/src/app/auth/form/AuthForm.module.scss
@@ -14,8 +14,8 @@
 
 .recaptcha {
 	@apply mb-5;
-	filter: invert (1) grayscale(1);
-	transform: scaleX(1.22);
+	filter: invert(1) grayscale(1);
+	transform: scale(1.22);
 
 	> div > div {
 		@apply mx-auto;
