--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,6 +6,8 @@
 
 	--default-transition-duration: 400ms;
 	--default-transition-timing-function: ease-in-out;
+
+	--breakpoint-1xl: 1440px;
 }
 
 html {
@@ -13,7 +15,10 @@ html {
 }
 
 body {
-	@apply px-8;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
 	font-size: 20px;
 	margin: 0 auto;
 }
@@ -29,4 +34,89 @@ h1 {
 
 h2 {
 	@apply text-2xl;
+}
+
+.slider-container {
+	height: 400px;
+	display: flex;
+	flex-wrap: nowrap;
+	justify-content: start;
+}
+
+.card {
+	width: 80px;
+	border-radius: 0.75rem;
+	background-size: cover;
+	cursor: pointer;
+	overflow: hidden;
+	border-radius: 2rem;
+	margin: 0 10px;
+	display: flex;
+	align-items: flex-end;
+	transition: 0.6s cubic-bezier(0.28, -0.03, 0, 0.99);
+	box-shadow: 0px 10px 30px -5px rgba(0, 0, 0, 0.8);
+}
+
+.card > .row {
+	color: white;
+	display: flex;
+	flex-wrap: nowrap;
+}
+
+.card > .row > .icon {
+	background: #223;
+	color: white;
+	border-radius: 50%;
+	width: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin: 15px;
+}
+
+.card > .row > .description {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	overflow: hidden;
+	height: 80px;
+	width: 520px;
+	opacity: 0;
+	transform: translateY(30px);
+	transition-delay: 0.3s;
+	transition: all 0.3s ease;
+}
+
+.description p {
+	color: #b0b0ba;
+	padding-top: 5px;
+}
+
+.description h4 {
+	text-transform: uppercase;
+}
+
+input {
+	display: none;
+}
+
+input:checked + label {
+	width: 600px;
+}
+
+input:checked + label .description {
+	opacity: 1 !important;
+	transform: translateY(0) !important;
+}
+.card[htmlFor='c1'] {
+	background-image: url('/ProjectSequence.png');
+}
+.card[htmlFor='c2'] {
+	background-image: url('/ProjectSequence.png');
+}
+.card[htmlFor='c3'] {
+	background-image: url('/ProjectSequence.png');
+}
+.card[htmlFor='c4'] {
+	background-image: url('/ProjectSequence.png');
 }
