--- a/src/app/HomePage.module.scss
+++ b/src/app/HomePage.module.scss
@@ -1,12 +1,12 @@
 @reference "./globals.css";
 
 .categories-wrapper {
-	@apply grid mb-8 bg-zinc-950;
+	@apply grid mb-8 bg-zinc-950 rounded-xl;
 	grid-template-rows: 250px auto;
 }
 
 .categories-heading {
-	@apply grid grid-cols-2 items-center px-12;
+	@apply grid lg:grid-cols-2 lg:grid-rows-1 items-center px-12 md:grid-cols-1 md:grid-rows-2;
 	h2 {
 		@apply xl:text-7xl lg:text-5xl md:text-4xl sm:text-3xl text-xl;
 	}
@@ -43,17 +43,4 @@
 			}
 		}
 	}
-}
-
-.slider-active {
-	/* @apply scale-x-50;
-	div {
-		@apply flex flex-col justify-between h-full;
-		p:last-child {
-			@apply text-end;
-		}
-	}
-	img {
-		@apply absolute h-full object-cover top-0 left-0 -z-10;
-	} */
 }
