--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,7 +52,6 @@ main {
 	width: 80px;
 	border-radius: 0.75rem;
 	background-size: cover;
-	cursor: pointer;
 	overflow: hidden;
 	border-radius: 2rem;
 	margin: 0 10px;
@@ -81,6 +80,10 @@ main {
 	transition-delay: 0.3s;
 	transition: all 0.3s ease;
 	margin-bottom: 1rem;
+}
+
+.row:hover > .category-title {
+	text-decoration: underline;
 }
 
 .description p {
@@ -119,11 +122,13 @@ input:checked + label .description {
 }
 
 
+
 @media (width <= 64rem /* 1024px */) {
 	.slider-container {
 		flex-direction: column;
 		gap: 1rem;
 		height: auto;
+		padding: 0 1rem;
 	}
 	input:checked + label {
     height: 300px;
@@ -133,15 +138,13 @@ input:checked + label .description {
 		color: #fff;
     display: grid;
     grid-template-rows: 88px auto;
-		grid-template-columns: 1fr 1fr;
+		grid-template-columns: 1fr ;
     padding-left: 1rem;
 	}	
-	input:checked + .card > .row {
-		grid-template-columns: 1fr;
-	}
 	input:checked + .card > .row > .description {
 		grid-column-start: 1;
 		grid-row-start: 1;
+		display: flex;
 	}
 	.vertical-text {
     text-transform: uppercase;
@@ -156,7 +159,7 @@ input:checked + label .description {
     border-radius: 1.4rem;
 	}
 	.card > .row > .description {
-		display: flex;
+		display: none;
 		justify-content: center;
 		flex-direction: column;
 		overflow: hidden;
@@ -173,7 +176,6 @@ input:checked + label .description {
 		width: 100%;
 		border-radius: .75rem;
 		background-size: cover;
-		cursor: pointer;
 		overflow: hidden;
 		border-radius: 2rem;
 		margin: 0;
