--- a/src/components/HomeMainScreen.module.scss
+++ b/src/components/HomeMainScreen.module.scss
@@ -5,14 +5,18 @@
 	grid-template-rows: 1fr 1fr 0.7fr 1fr;
 
 	li {
-		@apply flex items-center px-12;
+		@apply flex items-center pl-12;
 	}
-	li:not(:nth-child(3)) {
-		@apply xl:text-9xl lg:text-8xl md:text-7xl sm:text-5xl text-2xl uppercase;
+	li:not(:nth-child(2)):not(:nth-child(4)) {
+		@apply xl:text-[10rem] lg:text-9xl md:text-8xl text-5xl uppercase;
 	}
 	li:nth-child(3),
 	li:nth-child(4) {
-		@apply justify-end;
+		@apply justify-end pr-12;
+	}
+	li:nth-child(2),
+	li:nth-child(4) {
+		@apply xl:text-5xl lg:text-4xl md:text-3xl text-2xl uppercase;
 	}
 }
 
